[package]
name = "narrow-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
polars = "0.46.0"
axum = {version = "0.8.3", features = ["macros","http2", "ws"]}
bytes = "1.10.1"
