[package]
name = "narrow-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.11", features = ["full"] }
tokio = { version = "1.45.0", features = ["full"] }
http-body = "1.0.1"
http-body-util = "0.1.3"
polars = "0.47.1"
axum = {version = "0.8.4", features = ["macros","http2", "ws"]}
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
